# Portfolio_SantiagoSanchez-CeleminArevalo

./: asset-manifest.json  design_guidelines.json  index.html
.github/workflows/: deploy-pages.yml
.history/: .gitignore_20260129174326
.history/docs/: index_20251106095256.html  index_20251106144041.html  index_20251106144046.html  index_20251106144048.html  index_20251106144654.html  index_20251106144658.html  index_20251106144700.html  index_20251106144736.html  index_20251106145002.html  index_20251106150705.html  index_20251106150708.html  index_20251106150726.html  index_20251106150739.html  index_20251106150741.html  index_20251106150743.html  index_20251106150950.html  index_20251106151012.html  index_20251106151020.html  index_20251106151025.html  index_20251205131123.html  index_20251205131128.html  index_20251205131343.html  index_20251205131354.html  index_20251205131359.html  index_20251205131430.html  index_20251205132135.html  index_20251205132304.html  index_20251205132902.html  index_20251205132954.html  index_20251205133006.html  index_20251205133637.html  index_20251205134346.html  index_20251205134348.html  index_20251205134406.html  index_20251205134631.html  (+104 more)
docs/: index.html  styles.css
frontend/: package-lock.json
memory/: PRD.md
projects/remote-types-main-main/Kafka/: README.md  docker-compose.yml  pyproject.toml  txt
projects/remote-types-main-main/Kafka/Kaftka_codigos/: client.py  consumer.py  main.py  publisher.py
projects/remote-types-main-main/Kafka/Manual_de_Usuario/: Manual_de_usuario.md  Pruebas.md  test.py
(+355 files in other folders)
